# typed-money

./: CHANGELOG.md  CONTRIBUTING.md  CURRENCIES.md  Cargo.toml  INTERNATIONALIZATION.md  Makefile  PERFORMANCE.md  README.md  _typos.toml
.githooks/: README.md  pre-push
.github/workflows/: ci.yml
benches/: arithmetic.rs  conversions.rs  rounding.rs
examples/: basic_usage.rs  conversions.rs  currency_metadata.rs  custom_currency.rs  error_handling.rs  global_currencies.rs  internationalization.rs  precious_metals.rs  rounding.rs  serialization.rs
features/: EVALUATION_REPORT.md  IMPLEMENTATION_PLAN.md  functional-requirements.md  non-functional-requirements.md
src/: amount.rs  conversion_tracking.rs  currency.rs  error.rs  inner_prelude.rs  lib.rs  macros.rs  main.rs  rate.rs  rounding.rs
src/amount/: arithmetic.rs  constructors.rs  conversions.rs  currency_conversion.rs  determinism_tests.rs  display.rs  metadata.rs  mod.rs  parsing.rs  precision.rs  rounding.rs  serialization.rs  type_def.rs
src/currency/: aave.rs  ada.rs  aed.rs  ars.rs  aud.rs  bch.rs  bgn.rs  bhd.rs  bob.rs  brl.rs  btc.rs  busd.rs  cad.rs  chf.rs  clp.rs  cny.rs  comp.rs  cop.rs  czk.rs  dai.rs  dkk.rs  dot.rs  egp.rs  eth.rs  eur.rs  gbp.rs  ghs.rs  hkd.rs  hrk.rs  huf.rs  idr.rs  ils.rs  inr.rs  jod.rs  jpy.rs  kes.rs  krw.rs  kwd.rs  link.rs  ltc.rs  (+45 more)
