[package]
name = "typed-money"
version = "0.1.0"
edition = "2021"
authors = ["Ricardo Ferreira <ricardoferreirades@example.com>"]
license = "MIT OR Apache-2.0"
description = "A type-safe money library for Rust that prevents currency mixing bugs at compile time"
repository = "https://github.com/ricardoferreirades/typed-money"
keywords = ["money", "currency", "finance", "decimal", "type-safe"]
categories = ["data-structures", "mathematics"]

[lib]
name = "typed_money"
path = "src/lib.rs"

[dependencies]
rust_decimal = { version = "1.33", optional = true }
bigdecimal = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }

[features]
default = ["use_rust_decimal"]
use_rust_decimal = ["dep:rust_decimal"]
use_bigdecimal = ["dep:bigdecimal"]
conversion_tracking = []
serde_support = ["dep:serde"]
